--- a/dscommerce-frontend/src/index.css
+++ b/dscommerce-frontend/src/index.css
@@ -399,6 +399,9 @@ nav a {
 
 .dsc-dialog-btn-container {
   width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
 }
 
 .dsc-dialog-btn {
